--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,4 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.enabled=[]
+play.ws.cache.enabled=true
+play.ws.cache.cacheManagerResource="ehcache-play-ws-cache.xml"
