Added form validation and Readme.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.enabled=[]
-play.ws.cache.enabled=true
+play.ws.cache.enabled=false
 play.ws.cache.cacheManagerResource="ehcache-play-ws-cache.xml"
+play.ws.cache.heuristics.enabled=true
